added splash screen

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
     implementation "io.coil-kt:coil:1.1.1"
     implementation "com.squareup.picasso:picasso:2.5.2"
 
+    implementation 'androidx.core:core-splashscreen:1.0.0'
+
 
 
 
