--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.adityagupta.arcompanion">
+    package="com.adityagupta.arcompanion" >
 
     <uses-feature android:name="android.hardware.camera.any" />
 
@@ -19,28 +19,31 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ARCompanion"
-        tools:targetApi="31"
-        android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31" >
         <activity
-            android:name=".WikipediaWebViewActivity"
+            android:name=".activities.TechStackActivity"
             android:exported="false" />
         <activity
-            android:name=".MeaningActivity"
+            android:name=".activities.WikipediaWebViewActivity"
             android:exported="false" />
         <activity
-            android:name=".ImageDisplayActivity"
+            android:name=".activities.MeaningActivity"
             android:exported="false" />
         <activity
-            android:name=".CameraActivity"
+            android:name=".activities.ImageDisplayActivity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.CameraActivity"
+            android:exported="false" />
+        <activity
+            android:name=".activities.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.App.Starting">
+            android:theme="@style/Theme.App.Starting" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
