--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,6 +82,7 @@ dependencies {
     implementation "com.squareup.picasso:picasso:2.5.2"
 
     implementation 'androidx.core:core-splashscreen:1.0.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
 
 
