--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="com.adityagupta.arcompanion" >
+    package="com.adityagupta.arcompanion">
 
     <uses-feature android:name="android.hardware.camera.any" />
 
@@ -24,7 +24,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.ARCompanion"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".activities.ARSupportedActivity"
+            android:exported="false" />
         <activity
             android:name=".activities.TechStackActivity"
             android:exported="false" />
@@ -43,7 +46,7 @@
         <activity
             android:name=".activities.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.App.Starting" >
+            android:theme="@style/Theme.App.Starting">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
