--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,6 +84,7 @@ dependencies {
     implementation 'androidx.core:core-splashscreen:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
 
 
