--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -69,6 +69,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.folioreader.ui.activity.SearchActivity"
+            android:exported="false"
+        >
+        <!-- ... -->
+    </activity>
     </application>
 
 </manifest>
