--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,12 @@
 buildscript {
     repositories {
         // Check that you have the following line (if not, add it):
+
+        mavenCentral()
         google()  // Google's Maven repository
+        maven { url 'https://jitpack.io' }
+
+
 
     }
     dependencies {
@@ -14,10 +19,12 @@ buildscript {
     }
 }
 
+
+
 plugins {
     id 'com.android.application' version '8.1.2' apply false
     id 'com.android.library' version '8.1.2' apply false
-    id 'org.jetbrains.kotlin.android' version '1.9.10' apply false
+    id 'org.jetbrains.kotlin.android' version '1.9.22' apply false
 
 }
 
